--- a/richu_web/index.html
+++ b/richu_web/index.html
@@ -35,15 +35,15 @@
     <!-- 头部 -->
     <header class="header animate">
       <div class="h-content middle-container">
-        <div class="h-logo"><img src="assets/img/logo-font.png" /></div>
+        <a href="index.html" class="h-logo"><img src="assets/img/logo-font.png" /></a href="index.html">
         <div class="h-nav">
           <ul class="clear-float">
             <li><a href="index.html" class="nav-active">首页</a></li>
             <li><a href="about.html">关于日出</a></li>
             <li><a href="project.html">集团产业</a></li>
             <li><a href="culture.html">人力资源</a></li>
-            <li><a href="contact.html">联系我们</a></li>
             <li><a href="news.html">新闻中心</a></li>
+            <li><a href="contact.html">联系我们</a></li>
           </ul>
           <a class="h-search nav-active" href="search.html">
             <img
@@ -67,8 +67,8 @@
           <li><a href="project.html">集团产业</a></li>
           <li><a href="culture.html">人力资源</a></li>
           <li><a href="contact.html">联系我们</a></li>
-          <li><a href="news.html">新闻中心</a></li>
           <li><a href="search.html">产品查询</a></li>
+          <li><a href="news.html">新闻中心</a></li>
         </ul>
       </div>
     </header>
@@ -135,7 +135,7 @@
             >95<span class="text">%销售至终端客户</span></span
           >
         </div>
-        <a class="btn-small animate">查看更多</a>
+        <a href="project.html?action=fenXiaoJingYing" class="btn-small animate">查看更多</a>
       </div>
     </section>
 
@@ -164,7 +164,7 @@
           <div>农药熏蒸剂：地美地丰®</div>
           <div>原生态药材：三七及其系列产品</div>
         </div>
-        <a class="btn-small animate">查看更多</a>
+        <a href="project.html?action=ZhiWuBaoHu" class="btn-small animate">查看更多</a>
       </div>
     </section>
 
@@ -195,7 +195,7 @@
             3,6-二氯哒嗪&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2,6-二氯吡嗪
           </div>
         </div>
-        <a class="btn-small animate">查看更多</a>
+        <a href="project.html?action=DongWuJianKang" class="btn-small animate">查看更多</a>
       </div>
     </section>
 
@@ -212,7 +212,7 @@
             <span class="i-p-num">05</span>
           </div>
         </div>
-        <div class="content" style="width: 580px">
+        <div class="content">
           <div>
             基础化学品渠道服务型贸易商，与上游众多企业建立战略合作关系
           </div>
@@ -262,7 +262,7 @@
             </div>
           </div>
         </div>
-        <a class="btn-small animate">查看更多</a>
+        <a href="project.html?action=GuoJiMaoYi" class="btn-small animate">查看更多</a>
       </div>
     </section>
 
@@ -289,7 +289,7 @@
             醋酸乙酯、醋酸丁酯、异丙醇、醋酸正丙酯、醋酸异丙酯、正丙醇、1，2-己二醇、异已烷、环己酮、N,N-二甲基甲酰胺、丙二醇、丙二醇甲醚醋酸酯、N-甲基吡咯烷酮、四氢呋喃、磷酸三苯酯、二氯甲烷、三氯乙烯、四氯乙烯、苯甲醇。
           </div>
         </div>
-        <a class="btn-small animate">查看更多</a>
+        <a href="project.html?action=fenXiaoJingYing" class="btn-small animate">查看更多</a>
       </div>
     </section>
 
@@ -382,7 +382,7 @@
       </div>
       <div class="f-copyright">
         ©2019 日出实业集团有限公司 All Rights Reserved. 浙ICP备624765832号 Power
-        by mfweb. <a href="#">网站声明</a> 丨 <a href="#">隐私政策</a>
+        by mfweb. <a href="copyright.html">网站声明</a> 丨 <a href="privacy.html">隐私政策</a>
       </div>
     </footer>
     <!-- 底部 end -->
