--- a/richu_web/news.html
+++ b/richu_web/news.html
@@ -35,15 +35,15 @@
     <!-- 头部 -->
     <header class="header animate">
       <div class="h-content middle-container">
-        <div class="h-logo"><img src="assets/img/logo-font.png" /></div>
+        <a href="index.html" class="h-logo"><img src="assets/img/logo-font.png" /></a href="index.html">
         <div class="h-nav">
           <ul class="clear-float">
             <li><a href="index.html">首页</a></li>
             <li><a href="about.html">关于日出</a></li>
             <li><a href="project.html">集团产业</a></li>
             <li><a href="culture.html">人力资源</a></li>
-            <li><a href="contact.html">联系我们</a></li>
             <li><a href="news.html" class="nav-active">新闻中心</a></li>
+            <li><a href="contact.html">联系我们</a></li>
           </ul>
           <a class="h-search nav-active" href="search.html">
             <img
@@ -66,8 +66,8 @@
           <li><a href="about.html">关于日出</a></li>
           <li><a href="project.html">集团产业</a></li>
           <li><a href="culture.html">人力资源</a></li>
-          <li><a href="contact.html">联系我们</a></li>
           <li><a href="news.html" class="nav-active">新闻中心</a></li>
+          <li><a href="contact.html">联系我们</a></li>
           <li><a href="search.html">产品查询</a></li>
         </ul>
       </div>
@@ -81,142 +81,168 @@
 
     <section class="top-news-wrap news-container">
       <div class="left-content">
-        <div class="c-title">关于举办2019动物健康安全高峰论坛</div>
+        <a href="news-detail.html" class="c-title">关于举办2019动物健康安全高峰论坛</a href="news-detail.html">
         <div class="c-date">2019-07-13</div>
-        <div class="c-content">
+        <a href="news-detail.html" class="c-content">
           为贯彻党中央、国务院关于食品安全工作的决策部署，进一步落实农业部出台《全国遏制动物源细菌耐药行动计划(2017-2020)》，提高兽用抗菌药物科学管理水平.
-        </div>
-        <a class="c-btn-more animate" href="news-detail.html">加载更多</a>
+        </a>
+        <a class="c-btn-more animate" href="news-detail.html">查看更多</a>
       </div>
       <div class="right-img">
-        <img src="./assets/img/blur-blurry-bright-404976@2x.jpg" alt="" />
+        <a href="news-detail.html">
+          <img src="./assets/img/blur-blurry-bright-404976@2x.jpg" alt="" />
+        </a>
       </div>
     </section>
 
     <section class="news-list-wrap news-container">
       <div class="news-item-wrap">
-        <img
-          src="./assets/img/anastasia-leonova-_MDqwFlbUQg-unsplash@2x.jpg"
-          alt=""
-          class="c-img"
-        />
-        <div class="c-title">关于举办2019动物健康安全高峰论坛</div>
+        <a href="news-detail.html">
+          <img
+            src="./assets/img/anastasia-leonova-_MDqwFlbUQg-unsplash@2x.jpg"
+            alt=""
+            class="c-img"
+          />
+        </a>
+        <a href="news-detail.html" class="c-title">关于举办2019动物健康安全高峰论坛</a>
         <div class="c-date">2019-07-13</div>
-        <div class="c-content">
+        <a href="news-detail.html" class="c-content">
           为贯彻党中央、国务院关于食品安全工作的决策部署，进一步落实农业部出台《全国遏制动物源细菌耐药行动计划(2017-2020)》，提高兽用抗菌药物科学管理水平.
-        </div>
-        <a class="c-btn-more animate" href="news-detail.html">加载更多</a>
+        </a>
+        <a class="c-btn-more animate" href="news-detail.html">查看更多</a>
       </div>
       <div class="news-item-wrap">
-        <img
-          src="./assets/img/blur-close-up-environment-1251026@2x.jpg"
-          alt=""
-          class="c-img"
-        />
-        <div class="c-title">关于举办2019动物健康安全高峰论坛</div>
+        <a href="news-detail.html">
+          <img
+            src="./assets/img/blur-close-up-environment-1251026@2x.jpg"
+            alt=""
+            class="c-img"
+          />
+        </a>
+        <a href="news-detail.html" class="c-title">关于举办2019动物健康安全高峰论坛</a>
         <div class="c-date">2019-07-13</div>
-        <div class="c-content">
+        <a href="news-detail.html" class="c-content">
           为贯彻党中央、国务院关于食品安全工作的决策部署，进一步落实农业部出台《全国遏制动物源细菌耐药行动计划(2017-2020)》，提高兽用抗菌药物科学管理水平.
-        </div>
-        <a class="c-btn-more animate" href="news-detail.html">加载更多</a>
+        </a>
+        <a class="c-btn-more animate" href="news-detail.html">查看更多</a>
       </div>
       <div class="news-item-wrap">
-        <img src="./assets/img/o_46@2x.jpg" alt="" class="c-img" />
-        <div class="c-title">关于举办2019动物健康安全高峰论坛</div>
+        <a href="news-detail.html">
+          <img src="./assets/img/o_46@2x.jpg" alt="" class="c-img" />
+        </a>
+        <a href="news-detail.html" class="c-title">关于举办2019动物健康安全高峰论坛</a>
         <div class="c-date">2019-07-13</div>
-        <div class="c-content">
+        <a href="news-detail.html" class="c-content">
           为贯彻党中央、国务院关于食品安全工作的决策部署，进一步落实农业部出台《全国遏制动物源细菌耐药行动计划(2017-2020)》，提高兽用抗菌药物科学管理水平.
-        </div>
-        <a class="c-btn-more animate" href="news-detail.html">加载更多</a>
+        </a>
+        <a class="c-btn-more animate" href="news-detail.html">查看更多</a>
       </div>
       <div class="news-item-wrap">
-        <img src="./assets/img/o_24@2x.jpg" alt="" class="c-img" />
-        <div class="c-title">关于举办2019动物健康安全高峰论坛</div>
+        <a href="news-detail.html">
+          <img src="./assets/img/o_24@2x.jpg" alt="" class="c-img" />
+        </a>
+        <a href="news-detail.html" class="c-title">关于举办2019动物健康安全高峰论坛</a>
         <div class="c-date">2019-07-13</div>
-        <div class="c-content">
+        <a href="news-detail.html" class="c-content">
           为贯彻党中央、国务院关于食品安全工作的决策部署，进一步落实农业部出台《全国遏制动物源细菌耐药行动计划(2017-2020)》，提高兽用抗菌药物科学管理水平.
-        </div>
-        <a class="c-btn-more animate" href="news-detail.html">加载更多</a>
+        </a>
+        <a class="c-btn-more animate" href="news-detail.html">查看更多</a>
       </div>
       <div class="news-item-wrap">
-        <img src="./assets/img/n_21@2x.jpg" alt="" class="c-img" />
-        <div class="c-title">关于举办2019动物健康安全高峰论坛</div>
+        <a href="news-detail.html">
+          <img src="./assets/img/n_21@2x.jpg" alt="" class="c-img" />
+        </a>
+        <a href="news-detail.html" class="c-title">关于举办2019动物健康安全高峰论坛</a>
         <div class="c-date">2019-07-13</div>
-        <div class="c-content">
+        <a href="news-detail.html" class="c-content">
           为贯彻党中央、国务院关于食品安全工作的决策部署，进一步落实农业部出台《全国遏制动物源细菌耐药行动计划(2017-2020)》，提高兽用抗菌药物科学管理水平.
-        </div>
-        <a class="c-btn-more animate" href="news-detail.html">加载更多</a>
+        </a>
+        <a class="c-btn-more animate" href="news-detail.html">查看更多</a>
       </div>
       <div class="news-item-wrap">
-        <img src="./assets/img/n_11@2x.jpg" alt="" class="c-img" />
-        <div class="c-title">关于举办2019动物健康安全高峰论坛</div>
+        <a href="news-detail.html">
+          <img src="./assets/img/n_11@2x.jpg" alt="" class="c-img" />
+        </a>
+        <a href="news-detail.html" class="c-title">关于举办2019动物健康安全高峰论坛</a>
         <div class="c-date">2019-07-13</div>
-        <div class="c-content">
+        <a href="news-detail.html" class="c-content">
           为贯彻党中央、国务院关于食品安全工作的决策部署，进一步落实农业部出台《全国遏制动物源细菌耐药行动计划(2017-2020)》，提高兽用抗菌药物科学管理水平.
-        </div>
-        <a class="c-btn-more animate" href="news-detail.html">加载更多</a>
+        </a>
+        <a class="c-btn-more animate" href="news-detail.html">查看更多</a>
       </div>
       <div class="news-item-wrap">
-        <img src="./assets/img/n_12@2x.jpg" alt="" class="c-img" />
-        <div class="c-title">关于举办2019动物健康安全高峰论坛</div>
+        <a href="news-detail.html">
+          <img src="./assets/img/n_12@2x.jpg" alt="" class="c-img" />
+        </a>
+        <a href="news-detail.html" class="c-title">关于举办2019动物健康安全高峰论坛</a>
         <div class="c-date">2019-07-13</div>
-        <div class="c-content">
+        <a href="news-detail.html" class="c-content">
           为贯彻党中央、国务院关于食品安全工作的决策部署，进一步落实农业部出台《全国遏制动物源细菌耐药行动计划(2017-2020)》，提高兽用抗菌药物科学管理水平.
-        </div>
-        <a class="c-btn-more animate" href="news-detail.html">加载更多</a>
+        </a>
+        <a class="c-btn-more animate" href="news-detail.html">查看更多</a>
       </div>
       <div class="news-item-wrap">
-        <img src="./assets/img/n_03@2x.jpg" alt="" class="c-img" />
-        <div class="c-title">关于举办2019动物健康安全高峰论坛</div>
+        <a href="news-detail.html">
+          <img src="./assets/img/n_03@2x.jpg" alt="" class="c-img" />
+        </a>
+        <a href="news-detail.html" class="c-title">关于举办2019动物健康安全高峰论坛</a>
         <div class="c-date">2019-07-13</div>
-        <div class="c-content">
+        <a href="news-detail.html" class="c-content">
           为贯彻党中央、国务院关于食品安全工作的决策部署，进一步落实农业部出台《全国遏制动物源细菌耐药行动计划(2017-2020)》，提高兽用抗菌药物科学管理水平.
-        </div>
-        <a class="c-btn-more animate" href="news-detail.html">加载更多</a>
+        </a>
+        <a class="c-btn-more animate" href="news-detail.html">查看更多</a>
       </div>
       <div class="news-item-wrap">
-        <img
-          src="./assets/img/bright-ecology-environment-1645226@2x.jpg"
-          alt=""
-          class="c-img"
-        />
-        <div class="c-title">关于举办2019动物健康安全高峰论坛</div>
+        <a href="news-detail.html">
+          <img
+            src="./assets/img/bright-ecology-environment-1645226@2x.jpg"
+            alt=""
+            class="c-img"
+          />
+        </a>
+        <a href="news-detail.html" class="c-title">关于举办2019动物健康安全高峰论坛</a>
         <div class="c-date">2019-07-13</div>
-        <div class="c-content">
+        <a href="news-detail.html" class="c-content">
           为贯彻党中央、国务院关于食品安全工作的决策部署，进一步落实农业部出台《全国遏制动物源细菌耐药行动计划(2017-2020)》，提高兽用抗菌药物科学管理水平.
-        </div>
-        <a class="c-btn-more animate" href="news-detail.html">加载更多</a>
+        </a>
+        <a class="c-btn-more animate" href="news-detail.html">查看更多</a>
       </div>
       <div class="news-item-wrap">
-        <img src="./assets/img/n_12@2x.jpg" alt="" class="c-img" />
-        <div class="c-title">关于举办2019动物健康安全高峰论坛</div>
+        <a href="news-detail.html">
+          <img src="./assets/img/n_12@2x.jpg" alt="" class="c-img" />
+        </a>
+        <a href="news-detail.html" class="c-title">关于举办2019动物健康安全高峰论坛</a>
         <div class="c-date">2019-07-13</div>
-        <div class="c-content">
+        <a href="news-detail.html" class="c-content">
           为贯彻党中央、国务院关于食品安全工作的决策部署，进一步落实农业部出台《全国遏制动物源细菌耐药行动计划(2017-2020)》，提高兽用抗菌药物科学管理水平.
-        </div>
-        <a class="c-btn-more animate" href="news-detail.html">加载更多</a>
+        </a>
+        <a class="c-btn-more animate" href="news-detail.html">查看更多</a>
       </div>
       <div class="news-item-wrap">
-        <img src="./assets/img/n_03@2x.jpg" alt="" class="c-img" />
-        <div class="c-title">关于举办2019动物健康安全高峰论坛</div>
+        <a href="news-detail.html">
+          <img src="./assets/img/n_03@2x.jpg" alt="" class="c-img" />
+        </a>
+        <a href="news-detail.html" class="c-title">关于举办2019动物健康安全高峰论坛</a>
         <div class="c-date">2019-07-13</div>
-        <div class="c-content">
+        <a href="news-detail.html" class="c-content">
           为贯彻党中央、国务院关于食品安全工作的决策部署，进一步落实农业部出台《全国遏制动物源细菌耐药行动计划(2017-2020)》，提高兽用抗菌药物科学管理水平.
-        </div>
-        <a class="c-btn-more animate" href="news-detail.html">加载更多</a>
+        </a>
+        <a class="c-btn-more animate" href="news-detail.html">查看更多</a>
       </div>
       <div class="news-item-wrap">
-        <img
-          src="./assets/img/bright-ecology-environment-1645226@2x.jpg"
-          alt=""
-          class="c-img"
-        />
-        <div class="c-title">关于举办2019动物健康安全高峰论坛</div>
+        <a href="news-detail.html">
+          <img
+            src="./assets/img/bright-ecology-environment-1645226@2x.jpg"
+            alt=""
+            class="c-img"
+          />
+        </a>
+        <a href="news-detail.html" class="c-title">关于举办2019动物健康安全高峰论坛</a>
         <div class="c-date">2019-07-13</div>
-        <div class="c-content">
+        <a href="news-detail.html" class="c-content">
           为贯彻党中央、国务院关于食品安全工作的决策部署，进一步落实农业部出台《全国遏制动物源细菌耐药行动计划(2017-2020)》，提高兽用抗菌药物科学管理水平.
-        </div>
-        <a class="c-btn-more animate" href="news-detail.html">加载更多</a>
+        </a>
+        <a class="c-btn-more animate" href="news-detail.html">查看更多</a>
       </div>
       <!-- 每行3个 不足时用空的 news-item-wrap 补齐来对齐
       <div class="news-item-wrap"></div>
@@ -307,7 +333,7 @@
       </div>
       <div class="f-copyright">
         ©2019 日出实业集团有限公司 All Rights Reserved. 浙ICP备624765832号 Power
-        by mfweb. <a href="#">网站声明</a> 丨 <a href="#">隐私政策</a>
+        by mfweb. <a href="copyright.html">网站声明</a> 丨 <a href="privacy.html">隐私政策</a>
       </div>
     </footer>
     <!-- 底部 end -->
