--- a/richu_web/privacy.html
+++ b/richu_web/privacy.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/response.css" />
   </head>
 
-  <body name="culture">
+  <body name="copyright">
     <!-- 头部 -->
     <header class="header animate">
       <div class="h-content middle-container">
@@ -43,7 +43,7 @@
             <li><a href="project.html">集团产业</a></li>
             <li><a href="culture.html">人力资源</a></li>
             <li><a href="news.html">新闻中心</a></li>
-            <li><a href="contact.html" class="nav-active">联系我们</a></li>
+            <li><a href="contact.html">联系我们</a></li>
           </ul>
           <a class="h-search nav-active" href="search.html">
             <img
@@ -67,147 +67,27 @@
           <li><a href="project.html">集团产业</a></li>
           <li><a href="culture.html">人力资源</a></li>
           <li><a href="news.html">新闻中心</a></li>
-          <li><a href="contact.html" class="nav-active">联系我们</a></li>
+          <li><a href="contact.html">联系我们</a></li>
           <li><a href="search.html">产品查询</a></li>
         </ul>
       </div>
     </header>
     <!-- 头部 end -->
 
-    <section
-      class="about-top-banner"
-      style="background-image: url('./assets/img/banner-984@2x.png');"
-    ></section>
-
-    <section class="contact-tab-container">
-      <div class="title-wrap">
-        <div class="en-title">Contact Us</div>
-        <div class="cn-title">联系我们</div>
-      </div>
-      <div class="contact-group">
-        <div class="contact-item animate">
-          <img class="c-icon" src="./assets/img/c-location.png" alt="" />
-          <div class="c-label">总部地址</div>
-          <div class="c-text">浙江省宁波市鄞州区宁波商会国贸中心42楼</div>
-        </div>
-        <div class="contact-item animate">
-          <img class="c-icon" src="./assets/img/c-email.png" alt="" />
-          <div class="c-label">邮箱</div>
-          <div class="c-text">sfcc@sfcc.com.</div>
-        </div>
-        <div class="contact-item animate">
-          <img class="c-icon" src="./assets/img/c-phone.png" alt="" />
-          <div class="c-label">电话</div>
-          <a class="c-text" href="tel:0574-8797-9999">0574-8797-9999</a>
-        </div>
-      </div>
-      <div class="contact-map">
-        <img src="./assets/img/map-bg.png" alt="" />
-        <div class="company-location">
-          <img src="./assets/img/map-location.png" alt="" />
-          <span class="company-name">中国 · 宁波</span>
-        </div>
-      </div>
-      <div class="contact-map-img">
-        <img src="./assets/img/contact-map-img.png" alt="" />
-      </div>
-    </section>
-
-    <section
-      class="company-contact-container"
-      style="background-image: url('./assets/img/company-contact-bg.png');"
-    >
-      <div class="company-contact-wrap">
-        <div class="company-contact-item">
-          <div class="c-name">临海建新化工有限公司</div>
-          <div class="c-detail-row">
-            <img src="./assets/img/s-c-location.png" alt="" />
-            浙江省台州市临海医化园区
-          </div>
-          <a class="c-detail-row" href="tel:0576-8558-8488">
-            <img src="./assets/img/s-c-phone.png" alt="" />
-            0576-8558-8488
-          </a>
-          <div class="c-detail-row">
-            <img src="./assets/img/s-c-message.png" alt="" />
-            zb@sfcc.com.cn
-          </div>
-        </div>
-        <div class="company-contact-item">
-          <div class="c-name">宁波远欧精细化工有限公司</div>
-          <div class="c-detail-row">
-            <img src="./assets/img/s-c-location.png" alt="" />
-            浙江省宁波市石化经济技术开发区北海路
-          </div>
-          <a class="c-detail-row" href="tel:0574-8650-3602">
-            <img src="./assets/img/s-c-phone.png" alt="" />
-            0574-8650-3602
-          </a>
-          <div class="c-detail-row">
-            <img src="./assets/img/s-c-message.png" alt="" />
-            zb@sfcc.com.cn
-          </div>
-        </div>
-        <div class="company-contact-item">
-          <div class="c-name">浙江日出精细化工有限公司</div>
-          <div class="c-detail-row">
-            <img src="./assets/img/s-c-location.png" alt="" />
-            宁波市鄞州区天童南路588号宁波商会国贸大厦
-          </div>
-          <a class="c-detail-row" href="tel:0574-8797-9999">
-            <img src="./assets/img/s-c-phone.png" alt="" />
-            0574-8797-9999
-          </a>
-          <div class="c-detail-row">
-            <img src="./assets/img/s-c-message.png" alt="" />
-            zb@sfcc.com.cn
-          </div>
-        </div>
-        <div class="company-contact-item">
-          <div class="c-name">宁波日出石化有限公司</div>
-          <div class="c-detail-row">
-            <img src="./assets/img/s-c-location.png" alt="" />
-            浙江省台州市临海医化园区
-          </div>
-          <a class="c-detail-row" href="tel:0576-85588488">
-            <img src="./assets/img/s-c-phone.png" alt="" />
-            0576-85588488
-          </a>
-          <div class="c-detail-row">
-            <img src="./assets/img/s-c-message.png" alt="" />
-            zb@sfcc.com.cn
-          </div>
-        </div>
-        <div class="company-contact-item">
-          <div class="c-name">云南日出药业有限公司</div>
-          <div class="c-detail-row">
-            <img src="./assets/img/s-c-location.png" alt="" />
-            云南省文山州文山市三七国际交易中心
-          </div>
-          <a class="c-detail-row" href="tel:0876-2629000">
-            <img src="./assets/img/s-c-phone.png" alt="" />
-            0876-2629000
-          </a>
-          <div class="c-detail-row">
-            <img src="./assets/img/s-c-message.png" alt="" />
-            zb@sfcc.com.cn
-          </div>
-        </div>
-        <div class="company-contact-item">
-          <div class="c-name">日出日本公司</div>
-          <div class="c-detail-row">
-            <img src="./assets/img/s-c-location.png" alt="" />
-            东京都中央区日本桥兜町11-7BM兜町大厦4楼
-          </div>
-          <a class="c-detail-row" href="tel:0081-3-36676222">
-            <img src="./assets/img/s-c-phone.png" alt="" />
-            0081-3-36676222
-          </a>
-          <div class="c-detail-row">
-            <img src="./assets/img/s-c-message.png" alt="" />
-            zb@sfcc.com.cn
-          </div>
-        </div>
+    <section class="privacy-section section-top">
+      <div class="privacy-editor">
+          <h3>慕枫网络隐私保护</h3>
+          <p>慕枫网咯深知隐私的重要性。本网页概述我们在您使用网站服务的过程中所接收和收集的个人信息的种类，以及我们所采取的保护信息的一些措施。我们希望这将有助于您在知情的情况下，就和我们共享个人信息的问题作出决定。</p>
+          <p>适用范围</p>
+          <p>本声明提供有关慕枫网咯网络隐私政策全文的主要部分概要，详细阐述适用于网站的隐私保护惯例。</p>
+          <p>收集的信息</p>
+          <p>本站在您自愿提供信息的其他情况下收集个人信息。我们可能将从您这里收集的个人信息或从第三方获得的信息进行整合，以向您提供更好的用户服务。</p>
+          <p>本站采用cookies和其他技术来增强您的在线体验、了解您使用本站服务的习惯，以改善我们的服务质量。当您访问我们网站或使用我们的某些产品时，本站服务器会自动记录信息，包括URL、IP地址、浏览器的类型和使用的语言以及访问日期和时间。</p>
+          <p>当您访问我们的网站时，我们会通过第三方广告公司来投放广告。这些公司可能会使用有关您对此网站和其他网站的访问情况的信息(不包括您的姓名、地址、电子邮件地址或电话号码)，以便向您展示您可能感兴趣的产品和服务的广告。</p>
+          <p>您的选择</p>
+          <p>在合理可能的情况下，我们会在要求您提供个人信息时给予您选择。您可以在针对各项特定服务的隐私声明或常见问题中找到更多有关您选择的资料。</p>
+          <p>您可以拒绝向我们提供个人信息及/或拒绝在您的浏览器中使用cookies技术，但这可能导致我们的一些特色功能或服务无法正常运行。</p>
+          <p>如您提出要求，我们将真诚地作出努力让您查阅您的个人信息，并在合理可行时，让您更正或删除该等不实的数据。</p>
       </div>
     </section>
 
