--- a/richu_web/project.html
+++ b/richu_web/project.html
@@ -35,15 +35,15 @@
     <!-- 头部 -->
     <header class="header animate">
       <div class="h-content middle-container">
-        <div class="h-logo"><img src="assets/img/logo-font.png" /></div>
+        <a href="index.html" class="h-logo"><img src="assets/img/logo-font.png" /></a href="index.html">
         <div class="h-nav">
           <ul class="clear-float">
             <li><a href="index.html">首页</a></li>
             <li><a href="about.html">关于日出</a></li>
             <li><a href="project.html" class="nav-active">集团产业</a></li>
             <li><a href="culture.html">人力资源</a></li>
-            <li><a href="contact.html">联系我们</a></li>
             <li><a href="news.html">新闻中心</a></li>
+            <li><a href="contact.html">联系我们</a></li>
           </ul>
           <a class="h-search nav-active" href="search.html">
             <img
@@ -66,8 +66,8 @@
           <li><a href="about.html">关于日出</a></li>
           <li><a href="project.html" class="nav-active">集团产业</a></li>
           <li><a href="culture.html">人力资源</a></li>
-          <li><a href="contact.html">联系我们</a></li>
           <li><a href="news.html">新闻中心</a></li>
+          <li><a href="contact.html">联系我们</a></li>
           <li><a href="search.html">产品查询</a></li>
         </ul>
       </div>
@@ -95,16 +95,16 @@
 
     <section class="project-tab-container">
       <div class="project-tab">
-        <div class="proj-tab-item active">
+        <div id="DongWuJianKang" class="proj-tab-item active">
           <span class="animate">动物健康</a>
         </div>
-        <div class="proj-tab-item">
+        <div id="ZhiWuBaoHu" class="proj-tab-item">
           <span class="animate">植物保护</a>
         </div>
-        <div class="proj-tab-item">
+        <div id="fenXiaoJingYing" class="proj-tab-item">
           <span class="animate">分销经营</a>
         </div>
-        <div class="proj-tab-item">
+        <div id="GuoJiMaoYi" class="proj-tab-item">
           <span class="animate">国际贸易</a>
         </div>
       </div>
@@ -279,8 +279,8 @@
                           </div>
                         </div>
                         <div class="right-img">
-                          <div class="img-wrap"><img src="./assets/img/tu861.jpg" alt=""></div>
-                          <div class="img-wrap"><img src="./assets/img/box-7.jpg" alt=""></div>
+                          <div class="img-wrap"><img src="./assets/img/tu861.png" alt=""></div>
+                          <div class="img-wrap"><img src="./assets/img/box-7.png" alt=""></div>
                         </div>
                       </div>
 
@@ -318,8 +318,8 @@
                           </div>
                         </div>
                         <div class="right-img">
-                          <div class="img-wrap"><img src="./assets/img/tu861.jpg" alt=""></div>
-                          <div class="img-wrap"><img src="./assets/img/box-7.jpg" alt=""></div>
+                          <div class="img-wrap"><img src="./assets/img/tu861.png" alt=""></div>
+                          <div class="img-wrap"><img src="./assets/img/box-7.png" alt=""></div>
                         </div>
                       </div>
 
@@ -357,8 +357,8 @@
                           </div>
                         </div>
                         <div class="right-img">
-                          <div class="img-wrap"><img src="./assets/img/tu861.jpg" alt=""></div>
-                          <div class="img-wrap"><img src="./assets/img/box-7.jpg" alt=""></div>
+                          <div class="img-wrap"><img src="./assets/img/tu861.png" alt=""></div>
+                          <div class="img-wrap"><img src="./assets/img/box-7.png" alt=""></div>
                         </div>
                       </div>
 
@@ -396,8 +396,8 @@
                           </div>
                         </div>
                         <div class="right-img">
-                          <div class="img-wrap"><img src="./assets/img/tu861.jpg" alt=""></div>
-                          <div class="img-wrap"><img src="./assets/img/box-7.jpg" alt=""></div>
+                          <div class="img-wrap"><img src="./assets/img/tu861.png" alt=""></div>
+                          <div class="img-wrap"><img src="./assets/img/box-7.png" alt=""></div>
                         </div>
                       </div>
                     </div>
@@ -480,9 +480,9 @@
                   专业从事精细化学品经营的分销商。 渠道经营，分销代理制商业模式。为合作伙伴提供技术、安全、质量管理和金融服务。专业领域：医药、农药、聚氨酯、涂料、电子等。
                 </div>
                 <div class="fx-num-group">
-                  <span class="num">2211</span>
-                  <span class="num">230</span>
-                  <span class="num">30</span>
+                  <span class="num">2211<span>客户</span></span>
+                  <span class="num">230<span>产品</span></span>
+                  <span class="num">30<span>亿</span></span>
                   <span class="num">95%<span>销售至终端客户</span></span>
                 </div>
                 <div class="fx-image-row">
@@ -858,7 +858,7 @@
       </div>
       <div class="f-copyright">
         ©2019 日出实业集团有限公司 All Rights Reserved. 浙ICP备624765832号 Power
-        by mfweb. <a href="#">网站声明</a> 丨 <a href="#">隐私政策</a>
+        by mfweb. <a href="copyright.html">网站声明</a> 丨 <a href="privacy.html">隐私政策</a>
       </div>
     </footer>
     <!-- 底部 end -->
