--- a/richu_web/about.html
+++ b/richu_web/about.html
@@ -35,15 +35,15 @@
     <!-- 头部 -->
     <header class="header animate">
       <div class="h-content middle-container">
-        <div class="h-logo"><img src="assets/img/logo-font.png" /></div>
+        <a href="index.html" class="h-logo"><img src="assets/img/logo-font.png" /></a href="index.html">
         <div class="h-nav">
           <ul class="clear-float">
             <li><a href="index.html">首页</a></li>
             <li><a href="about.html" class="nav-active">关于日出</a></li>
             <li><a href="project.html">集团产业</a></li>
             <li><a href="culture.html">人力资源</a></li>
-            <li><a href="contact.html">联系我们</a></li>
             <li><a href="news.html">新闻中心</a></li>
+            <li><a href="contact.html">联系我们</a></li>
           </ul>
           <a class="h-search nav-active" href="search.html">
             <img
@@ -66,8 +66,8 @@
           <li><a href="about.html" class="nav-active">关于日出</a></li>
           <li><a href="project.html">集团产业</a></li>
           <li><a href="culture.html">人力资源</a></li>
-          <li><a href="contact.html">联系我们</a></li>
           <li><a href="news.html">新闻中心</a></li>
+          <li><a href="contact.html">联系我们</a></li>
           <li><a href="search.html">产品查询</a></li>
         </ul>
       </div>
@@ -80,11 +80,11 @@
     ></section>
 
     <section class="about-tab-container">
-      <div class="a-tab-item">
-        <a href="#RiChuAbout" class="animate active">关于日出</a>
+      <div class="a-tab-item active" data-id="RiChuAbout">
+        <span class="animate">关于日出</span>
       </div>
-      <div class="a-tab-item">
-        <a href="#RiChuHistory" class="animate">日出历程</a>
+      <div class="a-tab-item" data-id="RiChuHistory">
+        <span class="animate">日出历程</span>
       </div>
     </section>
 
@@ -260,7 +260,7 @@
       </div>
       <div class="f-copyright">
         ©2019 日出实业集团有限公司 All Rights Reserved. 浙ICP备624765832号 Power
-        by mfweb. <a href="#">网站声明</a> 丨 <a href="#">隐私政策</a>
+        by mfweb. <a href="copyright.html">网站声明</a> 丨 <a href="privacy.html">隐私政策</a>
       </div>
     </footer>
     <!-- 底部 end -->
