--- a/richu_web/copyright.html
+++ b/richu_web/copyright.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/response.css" />
   </head>
 
-  <body name="culture">
+  <body name="copyright">
     <!-- 头部 -->
     <header class="header animate">
       <div class="h-content middle-container">
@@ -43,7 +43,7 @@
             <li><a href="project.html">集团产业</a></li>
             <li><a href="culture.html">人力资源</a></li>
             <li><a href="news.html">新闻中心</a></li>
-            <li><a href="contact.html" class="nav-active">联系我们</a></li>
+            <li><a href="contact.html">联系我们</a></li>
           </ul>
           <a class="h-search nav-active" href="search.html">
             <img
@@ -67,147 +67,34 @@
           <li><a href="project.html">集团产业</a></li>
           <li><a href="culture.html">人力资源</a></li>
           <li><a href="news.html">新闻中心</a></li>
-          <li><a href="contact.html" class="nav-active">联系我们</a></li>
+          <li><a href="contact.html">联系我们</a></li>
           <li><a href="search.html">产品查询</a></li>
         </ul>
       </div>
     </header>
     <!-- 头部 end -->
 
-    <section
-      class="about-top-banner"
-      style="background-image: url('./assets/img/banner-984@2x.png');"
-    ></section>
-
-    <section class="contact-tab-container">
-      <div class="title-wrap">
-        <div class="en-title">Contact Us</div>
-        <div class="cn-title">联系我们</div>
-      </div>
-      <div class="contact-group">
-        <div class="contact-item animate">
-          <img class="c-icon" src="./assets/img/c-location.png" alt="" />
-          <div class="c-label">总部地址</div>
-          <div class="c-text">浙江省宁波市鄞州区宁波商会国贸中心42楼</div>
-        </div>
-        <div class="contact-item animate">
-          <img class="c-icon" src="./assets/img/c-email.png" alt="" />
-          <div class="c-label">邮箱</div>
-          <div class="c-text">sfcc@sfcc.com.</div>
-        </div>
-        <div class="contact-item animate">
-          <img class="c-icon" src="./assets/img/c-phone.png" alt="" />
-          <div class="c-label">电话</div>
-          <a class="c-text" href="tel:0574-8797-9999">0574-8797-9999</a>
-        </div>
-      </div>
-      <div class="contact-map">
-        <img src="./assets/img/map-bg.png" alt="" />
-        <div class="company-location">
-          <img src="./assets/img/map-location.png" alt="" />
-          <span class="company-name">中国 · 宁波</span>
-        </div>
-      </div>
-      <div class="contact-map-img">
-        <img src="./assets/img/contact-map-img.png" alt="" />
-      </div>
-    </section>
-
-    <section
-      class="company-contact-container"
-      style="background-image: url('./assets/img/company-contact-bg.png');"
-    >
-      <div class="company-contact-wrap">
-        <div class="company-contact-item">
-          <div class="c-name">临海建新化工有限公司</div>
-          <div class="c-detail-row">
-            <img src="./assets/img/s-c-location.png" alt="" />
-            浙江省台州市临海医化园区
-          </div>
-          <a class="c-detail-row" href="tel:0576-8558-8488">
-            <img src="./assets/img/s-c-phone.png" alt="" />
-            0576-8558-8488
-          </a>
-          <div class="c-detail-row">
-            <img src="./assets/img/s-c-message.png" alt="" />
-            zb@sfcc.com.cn
-          </div>
-        </div>
-        <div class="company-contact-item">
-          <div class="c-name">宁波远欧精细化工有限公司</div>
-          <div class="c-detail-row">
-            <img src="./assets/img/s-c-location.png" alt="" />
-            浙江省宁波市石化经济技术开发区北海路
-          </div>
-          <a class="c-detail-row" href="tel:0574-8650-3602">
-            <img src="./assets/img/s-c-phone.png" alt="" />
-            0574-8650-3602
-          </a>
-          <div class="c-detail-row">
-            <img src="./assets/img/s-c-message.png" alt="" />
-            zb@sfcc.com.cn
-          </div>
-        </div>
-        <div class="company-contact-item">
-          <div class="c-name">浙江日出精细化工有限公司</div>
-          <div class="c-detail-row">
-            <img src="./assets/img/s-c-location.png" alt="" />
-            宁波市鄞州区天童南路588号宁波商会国贸大厦
-          </div>
-          <a class="c-detail-row" href="tel:0574-8797-9999">
-            <img src="./assets/img/s-c-phone.png" alt="" />
-            0574-8797-9999
-          </a>
-          <div class="c-detail-row">
-            <img src="./assets/img/s-c-message.png" alt="" />
-            zb@sfcc.com.cn
-          </div>
-        </div>
-        <div class="company-contact-item">
-          <div class="c-name">宁波日出石化有限公司</div>
-          <div class="c-detail-row">
-            <img src="./assets/img/s-c-location.png" alt="" />
-            浙江省台州市临海医化园区
-          </div>
-          <a class="c-detail-row" href="tel:0576-85588488">
-            <img src="./assets/img/s-c-phone.png" alt="" />
-            0576-85588488
-          </a>
-          <div class="c-detail-row">
-            <img src="./assets/img/s-c-message.png" alt="" />
-            zb@sfcc.com.cn
-          </div>
-        </div>
-        <div class="company-contact-item">
-          <div class="c-name">云南日出药业有限公司</div>
-          <div class="c-detail-row">
-            <img src="./assets/img/s-c-location.png" alt="" />
-            云南省文山州文山市三七国际交易中心
-          </div>
-          <a class="c-detail-row" href="tel:0876-2629000">
-            <img src="./assets/img/s-c-phone.png" alt="" />
-            0876-2629000
-          </a>
-          <div class="c-detail-row">
-            <img src="./assets/img/s-c-message.png" alt="" />
-            zb@sfcc.com.cn
-          </div>
-        </div>
-        <div class="company-contact-item">
-          <div class="c-name">日出日本公司</div>
-          <div class="c-detail-row">
-            <img src="./assets/img/s-c-location.png" alt="" />
-            东京都中央区日本桥兜町11-7BM兜町大厦4楼
-          </div>
-          <a class="c-detail-row" href="tel:0081-3-36676222">
-            <img src="./assets/img/s-c-phone.png" alt="" />
-            0081-3-36676222
-          </a>
-          <div class="c-detail-row">
-            <img src="./assets/img/s-c-message.png" alt="" />
-            zb@sfcc.com.cn
-          </div>
-        </div>
+    <section class="privacy-section section-top">
+      <div class="privacy-editor">
+        <h3>慕枫网络版权声明</h3>
+        <p>访问者在接受本网站服务之前，请务必仔细阅读本条款并同意本声明。访问者访问本网站的行为以及通过各类方式利用本网站的行为，都将被视作是对本声明全部内容的无异议的认可;如有异议，请立即跟本网站协商，并取得本网站的书面同意意见。</p>
+        <p>第一条访问者在从事与本网站相关的所有行为(包括但不限于访问浏览、利用、转载、宣传介绍)时，必须以善意且谨慎的态度行事;访问者不得故意或者过失的损害或者弱化本网站的各类合法权利与利益，不得利用本网站以任何方式直接或者间接的从事违反中国法律、国际公约以及社会公德的行为，且访问者应当恪守下述承诺：</p>
+        <p>1、传输和利用信息符合中国法律、国际公约的规定、符合公序良俗;</p>
+        <p>2、不将本网站以及与之相关的网络服务用作非法用途以及非正当用途;</p>
+        <p>3、不干扰和扰乱本网站以及与之相关的网络服务;</p>
+        <p>4、遵守与本网站以及与之相关的网络服务的协议、规定、程序和惯例等。</p>
+        <p>第二条本网站郑重提醒访问者：请在转载、上载或者下载有关作品时务必尊重该作品的版权、著作权;如果您发现有您未署名的作品，请立即和我们联系，我们会在第一时间加上您的署名或作相关处理。</p>
+        <p>第三条除我们另有明确说明或者中国法律有强制性规定外，本网站用户原创的作品，本网站及作者共同享有版权，其他网站及传统媒体如需使用，须取得本网站的书面授权，未经授权严禁转载或用于其它商业用途。</p>
+        <p>第四条本网站内容仅代表作者本人的观点，不代表本网站的观点和看法，与本网站立场无关，相关责任作者自负。</p>
+        <p>第五条本网站有权将在本网站内发表的作品用于其他用途，包括网站、电子杂志等，作品有附带版权声明者除外。</p>
+        <p>第六条未经常本网站和作者共同同意，其他任何机构不得以任何形式侵犯其作品著作权，包括但不限于：擅自复制、链接、非法使用或转载，或以任何方式建立作品镜像。</p>
+        <p>第七条本网站所刊载的各类形式(包括但不仅限于文字、图片、图表)的作品仅供参考使用，并不代表本网站同意其说法或描述，仅为提供更多信息，也不构成任何投资建议。对于访问者根据本网站提供的信息所做出的一切行为，除非另有明确的书面承诺文件，否则本网站不承担任何形式的责任。</p>
+        <p>第八条当本网站以链接形式推荐其他网站内容时，本网站并不对这些网站或资源的可用性负责，且不保证从这些网站获取的任何内容、产品、服务或其他材料的真实性、合法性，对于任何因使用或信赖从此类网站或资源上获取的内容、产品、服务或其他材料而造成(或声称造成)的任何直接或间接损失，本网站均不承担任何责任。</p>
+        <p>第九条访问者在本网站注册时提供的一些个人资料，本网站除您本人同意及第十条规定外不会将用户的任何资料以任何方式泄露给任何一方。</p>
+        <p>第十条当政府部门、司法机关等依照法定程序要求本网站披露个人资料时，本网站将根据执法单位之要求或为公共安全之目的提供个人资料。在此情况下之任何披露，本网站均得免责。</p>
+        <p>第十一条由于用户将个人密码告知他人或与他人共享注册账户，由此导致的任何个人资料泄露，本网站不负任何责任。</p>
+        <p>第十二条本网站有部分内容来自互联网，如无意中侵犯了哪个媒体、公司、企业或个人等的知识产权，请来电或致函告之，本网站将在规定时间内给予删除等相关处理，若有涉及版权费等问题，请及时提供相关证明等材料并与我们联系，通过友好协商公平公正原则处理纠纷。</p>
+        <p>第十三条以上声明内容的最终解释权归慕枫网络所有。</p>
       </div>
     </section>
 
