--- a/richu_web/culture.html
+++ b/richu_web/culture.html
@@ -35,15 +35,15 @@
     <!-- 头部 -->
     <header class="header animate">
       <div class="h-content middle-container">
-        <div class="h-logo"><img src="assets/img/logo-font.png" /></div>
+        <a href="index.html" class="h-logo"><img src="assets/img/logo-font.png" /></a href="index.html">
         <div class="h-nav">
           <ul class="clear-float">
             <li><a href="index.html">首页</a></li>
             <li><a href="about.html">关于日出</a></li>
             <li><a href="project.html">集团产业</a></li>
             <li><a href="culture.html" class="nav-active">人力资源</a></li>
-            <li><a href="contact.html">联系我们</a></li>
             <li><a href="news.html">新闻中心</a></li>
+            <li><a href="contact.html">联系我们</a></li>
           </ul>
           <a class="h-search nav-active" href="search.html">
             <img
@@ -66,8 +66,8 @@
           <li><a href="about.html">关于日出</a></li>
           <li><a href="project.html">集团产业</a></li>
           <li><a href="culture.html" class="nav-active">人力资源</a></li>
-          <li><a href="contact.html">联系我们</a></li>
           <li><a href="news.html">新闻中心</a></li>
+          <li><a href="contact.html">联系我们</a></li>
           <li><a href="search.html">产品查询</a></li>
         </ul>
       </div>
@@ -219,7 +219,7 @@
       </div>
       <div class="f-copyright">
         ©2019 日出实业集团有限公司 All Rights Reserved. 浙ICP备624765832号 Power
-        by mfweb. <a href="#">网站声明</a> 丨 <a href="#">隐私政策</a>
+        by mfweb. <a href="copyright.html">网站声明</a> 丨 <a href="privacy.html">隐私政策</a>
       </div>
     </footer>
     <!-- 底部 end -->
